# 2dGame

./: CMakeLists.txt
includes/: Game.h  GameWindow.h  Player.h
includes/Managers/: ComponentManager.h  EntityManager.h  MapManager.h
includes/Systems/: GlobalCordinateSystem.h  PlayerMovementSystem.h  RenderSystem.h
src/: Game.cpp  GameWindow.cpp  Player.cpp  main.cpp
src/Managers/: EntityManager.cpp  MapManager.cpp
src/Systems/: PlayerMovementSystem.cpp  RenderSystem.cpp
